added google trends and rhyme zone

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Spell Checker</h1>
+    <h1>Word Analyzer</h1>
     <div class="copyright">
         &copy; <span id="currentYear"></span> <a href="https://logannitzsche.com">Logan Nitzsche</a>
     </div>
