--- a/REACT PLAYGROUND/public/index.html
+++ b/REACT PLAYGROUND/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spell Checker</title>
+    <title>Word Wise</title>
   </head>
   <body>
     <div id="root"></div> <!-- React will render here -->
