--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </main>
     </div>
     <footer class="copyright">
-        &copy; <span id="currentYear"></span> <a href="https://logannitzsche.com" target="_blank">Logan Nitzsche</a>
+        &copy; <span id="currentYear"></span> <a href="https://logannitzsche.com" target="_blank">Logan Nitzsche</a>. All Rights Reserved.
     </footer>
     <script src="script.js"></script>
 </body>
