--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Wise</title>
+    <link rel="icon" href="assets/img/lmn.png" type="image/png">
+    <link rel="apple-touch-icon" href="assets/img/lmn.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
