--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="app-container">
         <header>
-            <h1>Word Wise: Spell Checker and Word Analyzer</h1>
+            <img width=70%; src="images/logo.png" alt="Girl in a jacket">
         </header>
         <main>
             <div class="input-container">
