added linkedin and github logos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Word Wise</title>
     <link rel="icon" href="images/lmn.png" type="image/png">
     <link rel="apple-touch-icon" href="images/lmn.png">
+    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,6 +27,8 @@
         </main>
     </div>
     <footer class="copyright">
+        <a href="https://www.linkedin.com/in/logan-nitzsche"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/lmnitzsche"><i class="bi bi-github"></i></a>
         &copy; <span id="currentYear"></span> <a href="https://logannitzsche.com" target="_blank">Logan Nitzsche</a>. All Rights Reserved.
     </footer>
     <script src="script.js"></script>
