--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="app-container">
         <header>
-            <img width=70%; src="images/logo.png" alt="Girl in a jacket">
+            <img width=37%; src="images/logo.png" alt="WordWise logo">
         </header>
         <main>
             <div class="input-container">
